--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,8 +1,8 @@
 name: Tracer cron pipeline
 
 on:
-  schedule:
-    - cron: '0 0,8,16 * * *'  # every 8 hours (00h00, 08h00, 16h00 UTC)
+  #schedule:
+  #  - cron: '0 0,8,16 * * *'  # every 8 hours (00h00, 08h00, 16h00 UTC)
   workflow_dispatch:
 
 jobs:
@@ -23,10 +23,20 @@ jobs:
           chmod +x run_tests.sh
           ./run_tests.sh
 
-      - name: Upload test results
+      - name: Upload test results to a dedicated artifact
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: results/test_results.csv
           include-hidden-files: true
 
+      - name: Append results to a global repo file
+        run: |
+          cat results/test_results.csv >> cumulative_results.csv
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add cumulative_results.csv
+          git commit -m "Append test results [skip ci]"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
