--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,12 +2,17 @@ name: Tracer cron pipeline
 
 permissions:
   contents: write
+  
+# Disable scheduled runs temporarily
+# on:
+#   schedule:
+#     - cron: '0 0,8,16 * * *'  # every 8 hours (00h00, 08h00, 16h00 UTC)
+#   workflow_dispatch:
 
+# Only allow manual trigger for now
 on:
-  schedule:
-    - cron: '0 0,8,16 * * *'  # every 8 hours (00h00, 08h00, 16h00 UTC)
   workflow_dispatch:
-
+  
 jobs:
   run-tests:
     runs-on: ubuntu-latest
